tests/e2e/pass/m18_u8_subscript.ep
# EXIT: 66
fun main(): void {
    let s = "ABC"
    let bytes = bytes(s)
    os.ExitProcess(bytes[1])
}
